Fix anchors blowing up headers on Safari

--- a/src/_assets/scss/_post.scss
+++ b/src/_assets/scss/_post.scss
@@ -137,7 +137,6 @@
     opacity: 0.25;
     
     width: 0;
-    display: inline-block;
     margin-left: 0.5rem;
     
     &::after {
